fix misalignment on new connection page

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -167,8 +167,7 @@ form {
 }
 
 main.new-connection {
-  height: 100%;
-  margin: 0;
+  height: calc(100vh - 4rem);
 
   .new-connection-container {
     display: flex;
